be/src/runtime/krpc-data-stream-mgr.cc
@@ -418,7 +418,7 @@ KrpcDataStreamMgr::~KrpcDataStreamMgr() {
   shutdown_promise_.Set(true);
   deserialize_pool_.Shutdown();
   LOG(INFO) << "Waiting for data-stream-mgr maintenance thread...";
-  maintenance_thread_->Join();
+  if (maintenance_thread_.get() != nullptr) maintenance_thread_->Join();
   LOG(INFO) << "Waiting for deserialization thread pool...";
   deserialize_pool_.Join();
 }
