bin/run-all-tests.sh
@@ -38,8 +38,8 @@ if "${CLUSTER_DIR}/admin" is_kerberized; then
   KERB_ARGS="--use_kerberos"
 fi
 
-# Enable KRPC during tests (default: false).
-: ${TEST_KRPC:=false}
+# Enable KRPC during tests (default: true).
+: ${TEST_KRPC:=true}
 
 # Parametrized Test Options
 # Run FE Tests
@@ -66,9 +66,9 @@ else
   TEST_START_CLUSTER_ARGS="${TEST_START_CLUSTER_ARGS} --cluster_size=3"
 fi
 
-# If KRPC tests are enabled, pass the corresponding flag during cluster start.
-if [[ "${TEST_KRPC}" != "false" ]]; then
-  TEST_START_CLUSTER_ARGS="${TEST_START_CLUSTER_ARGS} --use_krpc"
+# If KRPC tests are disabled, pass the flag to disable KRPC during cluster start.
+if [[ "${TEST_KRPC}" == "false" ]]; then
+  TEST_START_CLUSTER_ARGS="${TEST_START_CLUSTER_ARGS} --disable_krpc"
 fi
 
 # Indicates whether code coverage reports should be generated.
@@ -119,10 +119,10 @@ if [[ "${TARGET_FILESYSTEM}" == "local" ]]; then
   COMMON_PYTEST_ARGS+=" --impalad=localhost:21000"
 fi
 
-# If KRPC tests are enabled, pass the corresponding flag to pytest. This includes the
-# end-to-end tests and the custom cluster tests.
-if [[ "${TEST_KRPC}" != "false" ]]; then
-  COMMON_PYTEST_ARGS+=" --test_krpc"
+# If KRPC tests are disabled, pass test_no_krpc flag to pytest.
+# This includes the end-to-end tests and the custom cluster tests.
+if [[ "${TEST_KRPC}" == "false" ]]; then
+  COMMON_PYTEST_ARGS+=" --test_no_krpc"
 fi
 
 # For logging when using run-step.
