tests/conftest.py
@@ -116,9 +116,9 @@ def pytest_addoption(parser):
                    help=("Indicates that tests are being run against a remote cluster. "
                          "Some tests may be marked to skip or xfail on remote clusters."))
 
-  parser.addoption("--test_krpc", dest="test_krpc", action="store_true", default=False,
-                   help="Run all tests with KRPC enabled. This assumes that the test "
-                        "cluster has been started with --use-krpc.")
+  parser.addoption("--test_no_krpc", dest="test_no_krpc", action="store_true",
+                   default=False, help="Run all tests with KRPC disabled. This assumes "
+                   "that the test cluster has been started with --disable_krpc.")
 
 
 def pytest_assertrepr_compare(op, left, right):
